change some overall style and modifiy the product description

--- a/alarmo.html
+++ b/alarmo.html
@@ -35,11 +35,39 @@
         <div class="goods-detail">
           <div class="left">
             <img src="imgs/alarmo.jpg" alt="">
-            <div class="des">
-              <div class="description">Description</div>
-              <div class="dess">Make waking up fun with Nintendo Sound Clock:
-                Alarmo™
-                Introduce a little play to your wake-up routine with</div>
+            <div class="product-description">
+              <h2>Description</h2>
+              <p>
+                Make waking up fun with <strong>Nintendo Sound Clock: Alarmo™</strong><br />
+                Introduce a little play to your wake-up routine with Alarmo, the interactive alarm clock from Nintendo! Start the day off right with fun animations, sounds, and characters from your favorite games. Use gestures or simply get out of bed to stop the alarm thanks to the motion sensor.
+              </p>
+              <h2>How it works</h2>
+              <div class="steps">
+                <div class="step">
+                  <h3>Before the alarm</h3>
+                  <p>A character from the title you selected waits patiently on screen.</p>
+                </div>
+                <div class="step">
+                  <h3>Alarm begins</h3>
+                  <p>Gentle sounds unique to the scene you've chosen begin to play.</p>
+                </div>
+                <div class="step">
+                  <h3>A visitor arrives</h3>
+                  <p>Someone (or something!) from your selected scene appears. Wave your hand or move to quiet the alarm. You might hear coins or other familiar sounds when interacting with Alarmo.</p>
+                </div>
+                <div class="step">
+                  <h3>A brief snooze</h3>
+                  <p>The visitor leaves, and gentle sounds play again. This repeats if you stay in bed.</p>
+                </div>
+                <div class="step">
+                  <h3>Time to get up!</h3>
+                  <p>If you remain in bed too long, a more persuasive character will arrive!</p>
+                </div>
+                <div class="step">
+                  <h3>You did it!</h3>
+                  <p>Once you're out of bed, the alarm stops and a victory fanfare plays. Hoorah!</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="right">
@@ -50,7 +78,7 @@
             </div>
             <div class="stock">
               <span>Stock:</span>
-              <div>In stock</div>
+              <div>&#9679; In stock</div>
             </div>
             <div class="quantity">
               <span>Quantity:</span>
@@ -83,7 +111,6 @@
             <img src="imgs/twitter.png" alt="Twitter" />
           </div>
         </div>
-
         <div class="footer-section">
           <h3>Shop</h3>
           <ul>
@@ -93,7 +120,6 @@
             <li><a href="#">> Limited Editions</a></li>
           </ul>
         </div>
-
         <div class="footer-section">
           <h3>Customer Support</h3>
           <ul>
@@ -103,7 +129,6 @@
             <li><a href="#">> Track Order</a></li>
           </ul>
         </div>
-
         <div class="footer-section">
           <h3>About</h3>
           <ul>
@@ -146,7 +171,7 @@
               <span>$159.99</span>
             </div>
             <div class="stock">
-              In stock
+              &#9679; In stock
             </div>
             <div class="quantity">
               <span>Quantity:</span>
@@ -161,17 +186,51 @@
               <div class="add-cart Nintendo">Add to cart</div>
             </div>
           </div>
-        </div>
-        <div class="aside">
-          <div class="close"><img src="imgs/close.png" alt="" class="closeIcon"></div>
-          <nav>
-            <li><a href="index.html"><span>Home</span> <span>></span></a></li>
-            <li><a href=""><span>Blog</span> <span>></span></a></li>
-            <li><a href=""><span>Postage</span> <span>></span></a></li>
-            <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
-            <li><a href=""><span>Contact</span> <span>></span></a></li>
-            <li><a href=""><span>Login</span> <span>></span></a></li>
-          </nav>
+          <div class="product-description">
+            <h2>Description</h2>
+            <p>
+              Make waking up fun with <strong>Nintendo Sound Clock: Alarmo™</strong><br />
+              Introduce a little play to your wake-up routine with Alarmo, the interactive alarm clock from Nintendo! Start the day off right with fun animations, sounds, and characters from your favorite games. Use gestures or simply get out of bed to stop the alarm thanks to the motion sensor.
+            </p>
+            <h2>How it works</h2>
+            <div class="steps">
+              <div class="step">
+                <h3>Before the alarm</h3>
+                <p>A character from the title you selected waits patiently on screen.</p>
+              </div>
+              <div class="step">
+                <h3>Alarm begins</h3>
+                <p>Gentle sounds unique to the scene you've chosen begin to play.</p>
+              </div>
+              <div class="step">
+                <h3>A visitor arrives</h3>
+                <p>Someone (or something!) from your selected scene appears. Wave your hand or move to quiet the alarm. You might hear coins or other familiar sounds when interacting with Alarmo.</p>
+              </div>
+              <div class="step">
+                <h3>A brief snooze</h3>
+                <p>The visitor leaves, and gentle sounds play again. This repeats if you stay in bed.</p>
+              </div>
+              <div class="step">
+                <h3>Time to get up!</h3>
+                <p>If you remain in bed too long, a more persuasive character will arrive!</p>
+              </div>
+              <div class="step">
+                <h3>You did it!</h3>
+                <p>Once you're out of bed, the alarm stops and a victory fanfare plays. Hoorah!</p>
+              </div>
+            </div>
+          </div>
+          <div class="aside">
+            <div class="close"><img src="imgs/close.png" alt="" class="closeIcon"></div>
+            <nav>
+              <li><a href="index.html"><span>Home</span> <span>></span></a></li>
+              <li><a href=""><span>Blog</span> <span>></span></a></li>
+              <li><a href=""><span>Postage</span> <span>></span></a></li>
+              <li><a href=""><span>Help/FAQ</span> <span>></span></a></li>
+              <li><a href=""><span>Contact</span> <span>></span></a></li>
+              <li><a href=""><span>Login</span> <span>></span></a></li>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
@@ -187,7 +246,6 @@
               <li><a href="#">> Limited Editions</a></li>
             </ul>
           </div>
-
           <div class="footer-section">
             <h3>Customer Support</h3>
             <ul>
@@ -197,7 +255,6 @@
               <li><a href="#">> Track Order</a></li>
             </ul>
           </div>
-
           <div class="footer-section">
             <h3>About</h3>
             <ul>
@@ -208,7 +265,6 @@
             </ul>
           </div>
         </div>
-
         <div class="footer-section about">
           <h2>Minotaur</h2>
           <p>
