adjust some indentation and some styles for homepage and product page

--- a/alarmo.html
+++ b/alarmo.html
@@ -30,7 +30,7 @@
       <div class="page-wrapper">
         <div class="search">
           <input type="text" placeholder="Search..." name="" id="">
-          <a href="productList.html"><img src="/imgs/search.png" alt=""></a>
+          <a href="productList.html"><img src="imgs/search.png" alt=""></a>
         </div>
         <div class="goods-detail">
           <div class="left">
@@ -149,7 +149,7 @@
   <div class="productPage mobile">
     <div class="page-header">
       <div class="popup"><img src="imgs/menu.png" alt="" class="openIcon"></div>
-      <div class="cart"><img src="imgs/shopping-cart(1).png" alt=""></div>
+      <div class="cart"><a href="cart.html"><img src="imgs/shopping-cart(1).png" alt=""></a></div>
     </div>
     <div class="page-content">
       <div class="page-wrapper">
