--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
           <div class="carousel-indicators"></div>
         </div>
 
-        <div class="active-moudles">
-          <div class="moudle"><img src="imgs/swords.png" alt="" /><span>Toys</span></div>
-          <div class="moudle"><img src="imgs/open-book.png" alt="" /><span>Books</span></div>
-          <div class="moudle"><img src="imgs/video-camera.png" alt="" /><span>Videos</span></div>
-          <div class="moudle"><img src="imgs/games.png" alt="" /><span>Games</span></div>
+        <div class="product-module">
+          <div class="module"><img src="imgs/swords.png" alt="" /><span>Toys</span></div>
+          <div class="module"><img src="imgs/open-book.png" alt="" /><span>Books</span></div>
+          <div class="module"><img src="imgs/video-camera.png" alt="" /><span>Videos</span></div>
+          <div class="module"><img src="imgs/games.png" alt="" /><span>Games</span></div>
         </div>
 
         <div class="load-more">Load more...</div>
