--- a/productList.html
+++ b/productList.html
@@ -195,10 +195,46 @@
             </div>
           </div>
           <div class="goods-body">
-            <a class="item" href=""><div class="top-img"><img src="imgs/switch(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Nintendo Switch</div><div class="price">Price: $539.99</div><div class="status">Out of stock</div></div></a>
-            <a class="item" href="alarmo.html"><div class="top-img"><img src="imgs/alarmo(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Nintendo alarmo</div><div class="price">Price: $159.99</div><div class="status green">In stock</div></div></a>
-            <a class="item" href="digivice.html"><div class="top-img"><img src="imgs/digivice(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Digivice-25th</div><div class="price">Price: $259.99</div><div class="status green">In stock</div></div></a>
-            <a class="item" href=""><div class="top-img"><img src="imgs/night(1).jpg" alt="" /></div><div class="bottom-content"><div class="name">Witch on the Holy Night</div><div class="price">Price: $99.99</div><div class="status">Out of stock</div></div></a>
+            <a class="item" href="">
+              <div class="top-img">
+                <img src="imgs/switch(1).jpg" alt="" />
+              </div>
+              <div class="bottom-content">
+                <div class="name">Nintendo Switch</div>
+                <div class="price">Price: $539.99</div>
+                <div class="status">Out of stock</div>
+              </div>
+            </a>
+            <a class="item" href="alarmo.html">
+              <div class="top-img">
+                <img src="imgs/alarmo(1).jpg" alt="" />
+              </div>
+              <div class="bottom-content">
+                <div class="name">Nintendo alarmo</div>
+                <div class="price">Price: $159.99</div>
+                <div class="status green">In stock</div>
+              </div>
+            </a>
+            <a class="item" href="digivice.html">
+              <div class="top-img">
+                <img src="imgs/digivice(1).jpg" alt="" />
+              </div>
+              <div class="bottom-content">
+                <div class="name">Digivice-25th</div>
+                <div class="price">Price: $259.99</div>
+                <div class="status green">In stock</div>
+              </div>
+            </a>
+            <a class="item" href="">
+              <div class="top-img">
+                <img src="imgs/night(1).jpg" alt="" />
+              </div>
+              <div class="bottom-content">
+                <div class="name">Witch on the Holy Night</div>
+                <div class="price">Price: $99.99</div>
+                <div class="status">Out of stock</div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
