change the file path

--- a/alarmo.html
+++ b/alarmo.html
@@ -288,8 +288,8 @@
   <div id="page-loader">
     <div class="spinner"></div>
   </div>
-  <script src="./js/res.js"></script>
-  <script src="./js/cart.js"></script>
+  <script src="/js/res.js"></script>
+  <script src="/js/cart.js"></script>
 </body>
 
 </html>
