--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   </div>
 
 
-  <script src="./js/carousel.js"></script>
-  <script src="./js/res.js"></script>
+  <script src="/js/carousel.js"></script>
+  <script src="/js/res.js"></script>
 </body>
 </html>
