--- a/productList.html
+++ b/productList.html
@@ -303,7 +303,7 @@
     <div class="spinner"></div>
   </div>
 
-  <script src="/js/res.js"></script>
-  <script src="/js/select.js"></script>
+  <script src="./js/res.js"></script>
+  <script src="./js/select.js"></script>
 </body>
 </html>
