--- a/alarmo.html
+++ b/alarmo.html
@@ -90,7 +90,7 @@
             </div>
             <div class="btns">
               <div class="buy">Buy</div>
-              <div class="add-cart Nintendo">Add to cart</div>
+              <div class="add-cart">Add to cart</div>
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="btns">
               <div class="buy">Buy</div>
-              <div class="add-cart Nintendo">Add to cart</div>
+              <div class="add-cart">Add to cart</div>
             </div>
           </div>
           <div class="product-description">
@@ -288,8 +288,8 @@
   <div id="page-loader">
     <div class="spinner"></div>
   </div>
-  <script src="/js/res.js"></script>
-  <script src="/js/cart.js"></script>
+  <script src="./js/res.js"></script>
+  <script src="./js/cart.js"></script>
 </body>
 
 </html>
