--- a/cart.html
+++ b/cart.html
@@ -78,6 +78,6 @@
   </div>
 
 </body>
-<script src="/js/res.js"></script>
-<script src="/js/cart.js"></script>
+<script src="./js/res.js"></script>
+<script src="./js/cart.js"></script>
 </html>
